[package]
name = "rustack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.22"
nom = "7"
test-log = "0.2.16"
tracing = {version="0.1", features=["log"]}
tracing-chrome = "0.7.2"
tracing-subscriber = {version="0.3.18", features=["std", "env-filter"]}

[[bin]]
name = "main_2"
path = "src/main_2.rs"

[[bin]]
name = "main_4"
path = "src/main_4.rs"
